src/index.less
#app {
    position: relative;
    border: 1px solid blue;

    * {
        margin: 0;
        padding: 0;
    }

    ul,
    li {
        list-style: none;
    }

    #xexcel-canvas {
        border: 1px solid red;
        // margin-left: 100px;
        // margin-top: 100px;
    }

    /* toolbar */
    .xsheet-toolbar {
        margin-bottom: 10px;

        ul.xsheet-toolbar-content {
            height: 30px;
            border: 1px solid green;
            // overflow: hidden;

            li.xsheet-toolbar-item {
                position: relative;
                float: left;
                line-height: 30px;
                vertical-align: middle;
                padding: 0 5px;
                border-right: 1px solid #E8E6E3;

                &:hover,
                &.active {
                    background: #E8E6E3;
                    cursor: pointer;
                    font-weight: 600;

                    .toolbar-setting-menu {
                        display: block;
                    }
                }

                input[type='color'] {
                    cursor: pointer;
                }

                label {
                    cursor: pointer;
                }

                // 字号选择
                .toolbar-setting-menu {
                    // display: none;
                    position: absolute;
                    width: 100%;
                    z-index: 100;
                    top: 100%;
                    left: 0;
                    background-color: #fff;

                    .toolbar-setting-menu-item {
                        text-align: center;

                        &:hover {
                            background-color: lavender;
                        }
                    }
                }
            }
        }
    }

    // zindex管理：
    // content > selector(2) > editor(3) > scroll(4)
    .xexcel-main-table {
        position: absolute;
        left: 0;
        top: 40px; // top: toolbarheight
        width: 100%;
        height: 100%;
        border: 2px solid red;
        overflow: hidden;

        .xexcel-main-table-inner {
            position: absolute;
            overflow: hidden;
            // z-index: 7;

            /* selector */
            .xexcel-selector {
                position: absolute;
                left: 0;
                top: 0;
                z-index: 2;

                .xexcel-selector-area {
                    display: none;
                    position: absolute;
                    border: 2px solid rgb(75, 137, 255);
                    background: rgba(75, 137, 255, .1);
                    pointer-events: none;
                }

                .xexcel-selector-corner {
                    position: absolute;
                    cursor: crosshair;
                    font-size: 0;
                    height: 5px;
                    width: 5px;
                    right: -5px;
                    bottom: -5px;
                    border: 2px solid rgb(255, 255, 255);
                    background: rgb(75, 137, 255);
                }

                /* editor */
                .xexcel-editor {
                    position: absolute;
                    text-align: left;
                    border: 2px solid #4b89ff;
                    line-height: 0;
                    z-index: 3;
                    overflow: hidden;

                    .xexcel-editor-textarea {
                        position: absolute;
                        left: 0;
                        top: 0;
                        width: 100%;
                        height: 100%;
                        box-sizing: content-box;
                        border: none;
                        padding: 0 4px;
                        outline-width: 0;
                        resize: none;
                        text-align: start;
                        overflow-y: hidden;
                        font-family: inherit;
                        font-size: inherit;
                        color: inherit;
                        white-space: normal;
                        word-wrap: break-word;
                        line-height: 22px;
                        margin: 0;
                    }
                }
            }

            /* scrollbar */
            // scrollbar相对maintable定位，但是不是自动撑开内容大小
            // 采用读取变量的方式定位scrollbar，这样可以维持main-table与canvas同级
            // 且 scrollzindex的仅滚动条 zindex > content
            .xexcel-scrollbar-wrapper {
                position: relative;
                z-index: 5;
                width: 100%;
                height: 100%;

                // width: ;
                .xexcel-scrollbar {
                    position: absolute;
                    opacity: 0.85;
                    z-index: 12;

                    &.horizontal {
                        bottom: 44px; // scrollbar height
                        left: 0;
                        overflow-x: scroll;
                        overflow-y: hidden;
                    }

                    &.vertical {
                        top: 0;
                        right: 5px;
                        overflow-x: hidden;
                        overflow-y: scroll;
                    }

                    &:hover {
                        opacity: .85;
                    }

                    &::-webkit-scrollbar {
                        width: 8px;
                        height: 8px;
                        background: rgba(75, 137, 255, 0.2);
                    }

                    &::-webkit-scrollbar-thumb {
                        background: rgb(75, 137, 255);
                        border-radius: 6px;
                    }

                    &::-webkit-scrollbar-corner {
                        background: rgba(75, 137, 255, .2);
                    }
                }
            }
        }


    }
}

